--- a/assets/scss/woocommerce/_nav-cart.scss
+++ b/assets/scss/woocommerce/_nav-cart.scss
@@ -77,6 +77,7 @@
     font-size: .85em;
     position: relative;
     width: 350px;
+    margin:0;
     &:hover {
       background: #f9f9f9;
     }
