--- a/assets/scss/woocommerce/_sidebar.scss
+++ b/assets/scss/woocommerce/_sidebar.scss
@@ -37,7 +37,6 @@
 .woocommerce .widget_shopping_cart .cart_list li, .woocommerce.widget_shopping_cart .cart_list li {
   font-size: .85em;
   border-bottom: $muted-border;
-  margin: $spacing-xs 0;
   position: relative;
   img {
     position: absolute;
@@ -50,6 +49,11 @@
   a:not(.remove) {
     padding-right: 61px;
   }
+}
+
+.woocommerce .nv-sidebar-wrap ul.cart_list li, .woocommerce ul.product_list_widget li {
+  margin-top: $spacing-xs;
+  padding-bottom: $spacing-xs;
 }
 
 @mixin shop-sidebar--laptop() {
